Fix: CTA section
Prior to fix, CTA was being overlapped by the logo image.
Logo text's position: relative took it out of normal flow,
and thus CTA was lining up under it thereby putting a part
of it under the logo image. Adjusted CTA margin top to "push"
it further down the page into its normal position. Decreased
font-size to 1.5em to further help and decrease overall height
of section.

--- a/style.css
+++ b/style.css
@@ -180,7 +180,8 @@ a {
   .calltoaction {
     max-width: 767px;
     max-height: 10em;
-    margin: 5% 0%;
+    margin: 22% 0% 5% 0%;
+    font-size: 1.5em;
   }
 
   .content {
